# gossip

./: .dockerignore  .gitignore  .typos.toml  Cargo.toml  DEVELOPING.md  LICENSE-MIT  LICENSE.txt  PERFORMANCE.md  README.md  build.rs  build.sh  debug.sh  devrun.sh  filescontaining.sh  filter.example.rhai  filter.rhai.example  find.sh  findfile.sh  flake.nix  gossip.log.txt  index.html  justfile  justfile.local.just  package.json  run.sh  rustfmt.toml  tsconfig.json  vite.config.ts
.config/: semgrep.yaml
gossip-bin/: Cargo.toml  build.rs
gossip-bin/src/: about.rs  commands.rs  date_ago.rs  main.rs  notecache.rs  notedata.rs  notes.rs  unsaved_settings.rs
gossip-bin/src/ui/: assets.rs  dm_chat_list.rs  emojis.rs  handler.rs  mod.rs  search.rs
gossip-bin/src/ui/components/: mod.rs
gossip-bin/src/ui/feed/: cached_note.rs  mod.rs  notedata.rs  notes.rs  post.rs
gossip-bin/src/ui/feed/note/: content.rs  mod.rs
gossip-bin/src/ui/help/: about.rs  mod.rs  stats.rs  theme.rs
gossip-bin/src/ui/notifications/: auth_request.rs  conn_request.rs  mod.rs  nip46_request.rs  pending.rs
gossip-bin/src/ui/people/: follow.rs  followed.rs  followers.rs  follows.rs  list.rs  lists.rs  mod.rs  muted.rs  person.rs
gossip-bin/src/ui/relays/: active.rs  coverage.rs  known.rs  mine.rs  mod.rs
gossip-bin/src/ui/settings/: content.rs  database.rs  id.rs  mod.rs  network.rs  posting.rs  ui.rs
gossip-bin/src/ui/theme/: classic.rs  default.rs  mod.rs  roundy.rs  test_page.rs
gossip-bin/src/ui/widgets/: avatar.rs  button.rs  contact_search.rs  copy_button.rs  information_popup.rs  link_context_menu.rs  list_entry.rs  mod.rs  modal_popup.rs  more_menu.rs  nav_item.rs  relay_entry.rs  switch.rs  textedit.rs
gossip-bin/src/ui/wizard/: follow_people.rs  import_keys.rs  import_private_key.rs  import_public_key.rs  mod.rs  read_nostr_config.rs  setup_metadata.rs  setup_relays.rs  setup_remote_signer.rs  welcome_gossip.rs  welcome_nostr.rs  wizard_state.rs
gossip-bin/src/ui/you/: delegation.rs  metadata.rs  mod.rs  nostr_connect.rs
gossip-cache/: Cargo.toml
gossip-cache/src/: lib.rs
gossip-gtk/: Cargo.toml  components.txt
gossip-gtk/src/: about.rs  commands.rs  main.rs
gossip-gtk/src/app/: gtk.rs  message.rs  mod.rs  page.rs
gossip-gtk/src/app/page_login/: mod.rs
gossip-lib/: Cargo.toml  build.rs
gossip-lib/src/: about.rs  blossom.rs  bookmarks.rs  client_identity.rs  commands.rs  comms.rs  delegation.rs  direct.rs  dm_channel.rs  error.rs  feed.rs  fetcher.rs  filter.rs  filter_set.rs  followers.rs  globals.rs  gossip_identity.rs  lib.rs  manager.rs  media.rs  misc.rs  names.rs  nip05.rs  nip46.rs  nostr_connect_server.rs  overlord.rs  pending.rs  people.rs  person_relay.rs  post.rs  process.rs  profile.rs  relationship.rs  relay.rs  relay_picker.rs  relay_picker_hooks.rs  relay_test_results.rs  seeker.rs  settings.rs  signer.rs  (+5 more)
gossip-lib/src/feed/: feed_kind.rs  mod.rs
gossip-lib/src/minion/: filter_fns.rs  handle_websocket.rs  mod.rs  subscription.rs  subscription_map.rs
gossip-lib/src/overlord/: mod.rs
gossip-lib/src/overlord/minion/: filter_fns.rs  handle_websocket.rs  mod.rs  subscription.rs  subscription_map.rs
gossip-lib/src/people/: follow_list.rs  mod.rs  sortable_pubkey.rs
gossip-lib/src/process/: by_kind.rs  mod.rs
gossip-lib/src/storage/: configured_handlers.rs  event_akci_index.rs  event_ek_c_index1.rs  event_ek_pk_index1.rs  event_kci_index.rs  event_references_person1.rs  event_seen_on_relay1.rs  event_tag_index1.rs  event_tci_index.rs  event_viewed1.rs  events1.rs  events2.rs  events3.rs  fof.rs  followings_table.rs  general.rs  handlers_table.rs  hashtags1.rs  macros  mod.rs  nip46servers1.rs  nip46servers2.rs  people1.rs  people2.rs  person3_table.rs  person4_table.rs  person_lists1.rs  person_lists2.rs  person_lists_metadata1.rs  person_lists_metadata2.rs  person_lists_metadata3.rs  person_relays1.rs  person_relays2.rs  prune.rs  relationships1.rs  relationships_by_addr1.rs  relationships_by_addr2.rs  relationships_by_addr3.rs  relationships_by_id1.rs  relationships_by_id2.rs  (+8 more)
gossip-lib/src/storage/import/legacy/: mod.rs
gossip-lib/src/storage/migrations/: deprecated.rs  m0.rs  m1.rs  m10.rs  m11.rs  m12.rs  m13.rs  m14.rs  m15.rs  m16.rs  m17.rs  m18.rs  m19.rs  m2.rs  m20.rs  m21.rs  m22.rs  m23.rs  m24.rs  m25.rs  m26.rs  m27.rs  m28.rs  m29.rs  m3.rs  m30.rs  m31.rs  m32.rs  m33.rs  m34.rs  m35.rs  m36.rs  m37.rs  m38.rs  m39.rs  m4.rs  m40.rs  m41.rs  m42.rs  m43.rs  (+11 more)
gossip-lib/src/storage/types/: following.rs  handler.rs  mod.rs  person1.rs  person2.rs  person3.rs  person4.rs  person_list1.rs  person_list_metadata1.rs  person_list_metadata2.rs  person_list_metadata3.rs  person_relay1.rs  person_relay2.rs  relationship1.rs  relationship_by_addr1.rs  relationship_by_addr2.rs  relationship_by_addr3.rs  relationship_by_id1.rs  relationship_by_id2.rs  relay1.rs  relay2.rs  relay3.rs  settings1.rs  settings2.rs  theme1.rs
gossip-lib/src/ui/: mod.rs
gossip-lib/src/ui/feed/: notedata.rs
gossip-lib/src/ui/people/: followed.rs  muted.rs
gossip-lib/src/ui/relays/: known.rs  mod.rs
gossip-lib/src/ui/settings/: mod.rs
gossip-lib/src/ui/theme/: classic.rs  default.rs  mod.rs
gossip-lib/src/ui/widgets/: mod.rs  relay_entry.rs
gossip-lib/src/ui/wizard/: import_private_key.rs  import_public_key.rs  mod.rs  setup_metadata.rs  welcome_gossip.rs
gossip-lib/src/ui/you/: metadata.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  main.rs  overlord.rs  settings.rs
src-tauri/src/db/: contact.rs  event.rs  event_seen.rs  event_tag.rs  mod.rs  person.rs  person_relay.rs  relay.rs  schema1.sql  schema2.sql  setting.rs
src-tauri/src/nostr/: mod.rs  websocket_handler.rs
src-tauri/src/overlord/: event_metadata.rs  event_processor.rs  feed.rs  feed_event_processor.rs  handle_bus.rs  js_event.rs  js_event_metadata.rs  minion.rs  mod.rs  person_synchro.rs  relay_picker.rs
src-tauri/src/overlord/minion/: handle_bus.rs  handle_websocket.rs  mod.rs  subscription.rs
(+342 files in other folders)
