[workspace]
members = [
  "gossip-lib",
  "gossip-bin",
  "gossip-cache",
]
resolver = "2"

# When compiling gossip crates themselves (in 'dev' mode), optimize a little bit
# (for fast compiles of our changes)
[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

# But when compiling dependencies, even in dev mode, optimize more
# (these rarely recompile during development, so we still get fast compiles)
[profile.dev.package."*"]
opt-level = 2
debug = "limited"
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

# A full-stack debug profile
[profile.devel]
inherits = "dev"
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

# Scrypt needs optimization or it takes too long
[profile.dev.package.scrypt]
opt-level = 3
debug-assertions = false
overflow-checks = false

# Scrypt needs optimization or it takes too long
[profile.devel.package.scrypt]
opt-level = 3
debug-assertions = false
overflow-checks = false
