[workspace]
members = [
  "gossip-lib",
  "gossip-bin",
  "gossip-cache",
]
resolver = "2"

[workspace.dependencies]
bech32 = "0.11"
blurhash = { version = "0.2", features = [ "image" ] }
image = { version = "0.25", features = [ "png", "jpeg" ] }
lazy_static = "1.5"
nostr-types = { git = "https://github.com/mikedilger/nostr-types", rev = "99017253c7558ecf67616760600dfa96ce30d774", features = [ "speedy", "client" ] }
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
speedy = "0.8.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2.5"
zeroize = "1.8"

# When compiling gossip crates themselves (in 'dev' mode), optimize a little bit
# (for fast compiles of our changes)
[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

# But when compiling dependencies, even in dev mode, optimize more
# (these rarely recompile during development, so we still get fast compiles)
[profile.dev.package."*"]
opt-level = 2
debug = "limited"
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

# A full-stack debug profile
[profile.devel]
inherits = "dev"
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

# Scrypt needs optimization or it takes too long
[profile.dev.package.scrypt]
opt-level = 3
debug-assertions = false
overflow-checks = false

# Scrypt needs optimization or it takes too long
[profile.devel.package.scrypt]
opt-level = 3
debug-assertions = false
overflow-checks = false
