[package]
name = "gossip"
version = "0.14.0-unstable"
description = "A social media client for nostr"
authors = ["Mike Dilger <mike@mikedilger.com>", "fiatjaf <fiatjaf@gmail.com>", "Nate Levin <natelevincycling@gmail.com>", "Nethanja Focking <nethanja@nethanja.de>", "Daniele Tonon <tonon@vitamino.it>", "jeremyd (@jeremyd)"]
license = "MIT"
repository = "https://github.com/mikedilger/gossip"
homepage = "https://github.com/mikedilger/gossip"
default-run = "gossip"
edition = "2021"

[features]
default = [ "rustls-tls-native" ]
lang-cjk = [ "gossip-lib/lang-cjk" ]
video-ffmpeg = [ "egui-video", "sdl2" ]
native-tls = [ "gossip-lib/native-tls" ]
rustls-tls = [ "gossip-lib/rustls-tls" ]
rustls-tls-native = [ "gossip-lib/rustls-tls-native" ]
appimage = [ "gossip-lib/appimage" ]

[dependencies]
bech32 = "0.11"
blurhash = { version = "0.2", features = [ "image" ] }
eframe = { git = "https://github.com/mikedilger/egui", rev = "edc28711696ca81d5b322f94419b465d06a84b50", features = [ "persistence", "wayland", "wgpu" ] }
egui-winit = { git = "https://github.com/mikedilger/egui", rev = "edc28711696ca81d5b322f94419b465d06a84b50", features = [ "default" ] }
egui_extras = { git = "https://github.com/mikedilger/egui", rev = "edc28711696ca81d5b322f94419b465d06a84b50", features = [ "syntect" ] }
egui-file-dialog = { git = "https://github.com/mikedilger/egui-file-dialog", rev = "70faa10e7201a328bcb2f16ce7657454b2c98476" }
egui-video = { git = "https://github.com/mikedilger/egui-video", rev = "7d141c6b17bfb9f107ace653dc259533f6b34d96",  features = [ "from_bytes" ], optional = true }
gossip-cache = { path = "../gossip-cache" }
gossip-lib = { path = "../gossip-lib" }
humansize = "2.1"
image = { version = "0.25", features = [ "png", "jpeg" ] }
lazy_static = "1.5"
memoize = "0.4"
nostr-types = { git = "https://github.com/mikedilger/nostr-types", rev = "a4d5c8f94b19c1306edcfeea51644541b02172bd", features = [ "speedy" ] }
paste = "1.0"
qrcode = "0.14"
resvg = "0.35.0"
rpassword = "7.3"
sdl2 = { version = "0.37", features = ["bundled"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = [ "formatting", "macros" ] }
tiny-skia = "0.10.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "std", "env-filter" ] }
url = "2.5"
usvg = "0.35.0"
zeroize = "1.7"
chrono = "0.4.38"

[package.metadata.deb]
section = "web"
assets = [
    ["target/release/gossip", "/usr/bin/", "755"],
    ["../packaging/debian/gossip.desktop", "/usr/share/applications/gossip.desktop", "644"],
]
features = [ "lang-cjk" ]

[package.metadata.appimage]
auto_link = true
