[package]
name = "gossip"
version = "0.15.0-unstable"
description = "A social media client for nostr"
authors = ["Mike Dilger <mike@mikedilger.com>", "fiatjaf <fiatjaf@gmail.com>", "Nate Levin <natelevincycling@gmail.com>", "Nethanja Focking <nethanja@nethanja.de>", "Daniele Tonon <tonon@vitamino.it>", "jeremyd (@jeremyd)"]
license = "MIT"
repository = "https://github.com/mikedilger/gossip"
homepage = "https://github.com/mikedilger/gossip"
default-run = "gossip"
edition = "2021"

[features]
default = [ "rustls-tls-native" ]
lang-cjk = [ "gossip-lib/lang-cjk" ]
video-ffmpeg = [ "egui-video", "sdl2", "gossip-lib/sdl2" ]
native-tls = [ "gossip-lib/native-tls" ]
rustls-tls = [ "gossip-lib/rustls-tls" ]
rustls-tls-native = [ "gossip-lib/rustls-tls-native" ]
appimage = [ "gossip-lib/appimage" ]

[dependencies]
bech32 = { workspace = true }
blurhash = { workspace = true }
chrono = "0.4.38"
console-subscriber = "0.4"
eframe = { git = "https://github.com/mikedilger/egui", rev = "20d9aaf91f3f792c53ce252fd8bc8cc4bdc51f78", features = [ "persistence", "wayland", "wgpu" ] }
egui-winit = { git = "https://github.com/mikedilger/egui", rev = "20d9aaf91f3f792c53ce252fd8bc8cc4bdc51f78", features = [ "default" ] }
egui_extras = { git = "https://github.com/mikedilger/egui", rev = "20d9aaf91f3f792c53ce252fd8bc8cc4bdc51f78", features = [ "syntect" ] }
egui-file-dialog = "0.10.0"
egui-video = { git = "https://github.com/mikedilger/egui-video", rev = "a6f335cfe0aa6824bf2d6fefbaaee27f7eca1a4e", features = [ "from_bytes" ], optional = true }
gossip-cache = { path = "../gossip-cache" }
gossip-lib = { path = "../gossip-lib" }
humansize = "2.1"
image = { workspace = true }
lazy_static = { workspace = true }
memoize = "0.4"
nostr-types = { workspace = true }
paste = { workspace = true }
qrcode = "0.14"
resvg = "0.35"
rpassword = "7.3"
sdl2 = { version = "0.37", features = ["bundled"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
speedy = { workspace = true }
time = { version = "0.3", features = [ "formatting", "macros" ] }
tiny-skia = "0.10.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = [ "std", "env-filter", "registry", "fmt" ] }
url = { workspace = true }
usvg = "0.35"
zeroize = { workspace = true }

[package.metadata.deb]
section = "web"
assets = [
    ["target/release/gossip", "/usr/bin/", "755"],
    ["../packaging/debian/gossip.desktop", "/usr/share/applications/gossip.desktop", "644"],
]
features = [ "lang-cjk" ]

[package.metadata.appimage]
auto_link = true
