[package]
name = "gossip-cache"
version = "0.14.0-unstable"
description = "A social media client for nostr"
authors = ["Mike Dilger <mike@mikedilger.com>", "fiatjaf <fiatjaf@gmail.com>", "Nate Levin <natelevincycling@gmail.com>", "Nethanja Focking <nethanja@nethanja.de>", "Daniele Tonon <tonon@vitamino.it>", "jeremyd (@jeremyd)"]
license = "MIT"
repository = "https://github.com/mikedilger/gossip"
homepage = "https://github.com/mikedilger/gossip"
edition = "2024"

[dependencies]
gossip-lib = { workspace = true }
nostr-types = { workspace = true, features = [ "speedy" ] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
