[package]
name = "gossip-cache"
version = "0.14.0-unstable"
description = "A social media client for nostr"
authors = ["Mike Dilger <mike@mikedilger.com>", "fiatjaf <fiatjaf@gmail.com>", "Nate Levin <natelevincycling@gmail.com>", "Nethanja Focking <nethanja@nethanja.de>", "Daniele Tonon <tonon@vitamino.it>", "jeremyd (@jeremyd)"]
license = "MIT"
repository = "https://github.com/mikedilger/gossip"
homepage = "https://github.com/mikedilger/gossip"
edition = "2024"

[dependencies]
gossip-lib = { path = "../gossip-lib" }
nostr-types = { git = "https://github.com/mikedilger/nostr-types", rev = "e019bb7065c3576a76974e8b9e902a25afb6c497", features = [ "speedy" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
