[package]
name = "gossip-lib"
version = "0.11.2"
description = "A social media client for nostr"
authors = ["Mike Dilger <mike@mikedilger.com>", "fiatjaf <fiatjaf@gmail.com>", "Nate Levin <natelevincycling@gmail.com>", "Nethanja Focking <nethanja@nethanja.de>", "Daniele Tonon <tonon@vitamino.it>", "jeremyd (@jeremyd)"]
license = "MIT"
repository = "https://github.com/mikedilger/gossip"
homepage = "https://github.com/mikedilger/gossip"
edition = "2021"

[features]
default = ["rustls-tls-native"]

# Include font for Chinese, Japanese and Korean characters
lang-cjk = []

# Use Native TLS code and native root certs
native-tls = [
  "reqwest/native-tls",
  "tungstenite/native-tls",
  "tokio-tungstenite/native-tls"
]

# Use Rust TLS code with WebPKI compiled-in root certs
rustls-tls = [
  "reqwest/rustls-tls-webpki-roots",
  "tungstenite/rustls-tls-webpki-roots",
  "tokio-tungstenite/rustls-tls-webpki-roots"
]

# Use Rust TLS  code with native root certs
rustls-tls-native = [
  "reqwest/rustls-tls-native-roots",
  "tungstenite/rustls-tls-native-roots",
  "tokio-tungstenite/rustls-tls-native-roots"
]

# Make tweaks for AppImage
appimage = []

[dependencies]
async-recursion = "1.0"
async-trait = "0.1"
base64 = "0.22"
bech32 = "0.11"
dashmap = "5.4"
dirs = "5.0"
encoding_rs = "0.8"
fallible-iterator = "0.2"
filetime = "0.2"
futures = "0.3"
futures-util = "0.3"
gossip-relay-picker = { git = "https://github.com/mikedilger/gossip-relay-picker", rev = "6a31a4f540ffc5c2928a8c9881810a12cd2cf9f4" }
heed = "0.20"
hex = "0.4"
http = "1.0"
image = { version = "0.24.6", features = [ "png", "jpeg" ] }
kamadak-exif = "0.5"
lazy_static = "1.4"
linkify = "0.10"
mime = "0.3"
nostr-types = { git = "https://github.com/mikedilger/nostr-types", rev = "76084731b6be2c0203ea1111bfc2a94fd91652b9", features = [ "speedy" ] }
parking_lot = "0.12"
paste = "1.0"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.11", default-features=false, features = ["brotli", "deflate", "gzip", "json"] }
resvg = "0.35.0"
rhai = { version = "1.15", features = [ "std", "sync" ]}
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", rev = "f2f1e29a416bcc22f2faf411866db2c8d9536308", features = ["bundled"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
speedy = "0.8.7"
textnonce = "1"
tiny-skia = "0.10.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tokio-tungstenite = { version = "0.21", default-features = false, features = [ "connect", "handshake" ] }
tungstenite = { version = "0.21", default-features = false }
url = "2.5"
usvg = "0.35.0"
zeroize = "1.7"

[target.'cfg(windows)'.dependencies]
normpath = "1.1"
