[package]
name = "gossip-lib"
version = "0.13.0-unstable"
description = "A social media client for nostr"
authors = ["Mike Dilger <mike@mikedilger.com>", "fiatjaf <fiatjaf@gmail.com>", "Nate Levin <natelevincycling@gmail.com>", "Nethanja Focking <nethanja@nethanja.de>", "Daniele Tonon <tonon@vitamino.it>", "jeremyd (@jeremyd)"]
license = "MIT"
repository = "https://github.com/mikedilger/gossip"
homepage = "https://github.com/mikedilger/gossip"
edition = "2021"

[features]
default = ["rustls-tls-native"]

# Include font for Chinese, Japanese and Korean characters
lang-cjk = []

# Use Native TLS code and native root certs
native-tls = [
  "reqwest/native-tls",
  "tungstenite/native-tls",
  "tokio-tungstenite/native-tls"
]

# Use Rust TLS code with WebPKI compiled-in root certs
rustls-tls = [
  "reqwest/rustls-tls-webpki-roots",
  "tungstenite/rustls-tls-webpki-roots",
  "tokio-tungstenite/rustls-tls-webpki-roots"
]

# Use Rust TLS  code with native root certs
rustls-tls-native = [
  "reqwest/rustls-tls-native-roots",
  "tungstenite/rustls-tls-native-roots",
  "tokio-tungstenite/rustls-tls-native-roots"
]

# Make tweaks for AppImage
appimage = []

[dependencies]
base64 = "0.22"
bech32 = "0.11"
blurhash = { version = "0.2", features = [ "image" ] }
dashmap = "6.0"
dirs = "5.0"
encoding_rs = "0.8"
filetime = "0.2"
futures = "0.3"
futures-util = "0.3"
heed = { version = "0.20", features = [ "read-txn-no-tls" ] }
hex = "0.4"
http = "1.1"
image = { version = "0.25", features = [ "png", "jpeg" ] }
kamadak-exif = "0.5"
lazy_static = "1.5"
linkify = "0.10"
mime = "0.3"
nostr-types = { git = "https://github.com/mikedilger/nostr-types", rev = "adcaa6cb63a3ea2770ceee662b05d47e5c9ab1f8", features = [ "speedy" ] }
parking_lot = { version = "0.12", features = [ "arc_lock", "send_guard" ] }
paste = "1.0"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", default-features=false, features = ["brotli", "deflate", "gzip", "json"] }
resvg = "0.43"
rhai = { version = "1.19", features = [ "std", "sync" ]}
sdl2 = { version = "0.37", features = ["bundled"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
speedy = "0.8.7"
tempdir = "0.3"
textnonce = "1"
tiny-skia = "0.11"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tokio-tungstenite = { version = "0.23", default-features = false, features = [ "connect", "handshake" ] }
tungstenite = { version = "0.23", default-features = false }
url = "2.5"
usvg = "0.43"
watcher = { git = "https://github.com/mikedilger/watcher", rev = "a4e7e70c396bca4630aa0ba0a15d54ea103cb0e9" }
zeroize = "1.8"

[target.'cfg(windows)'.dependencies]
normpath = "1.1"
