[package]
name = "gossip-lib"
version = "0.14.0-unstable"
description = "A social media client for nostr"
authors = ["Mike Dilger <mike@mikedilger.com>", "fiatjaf <fiatjaf@gmail.com>", "Nate Levin <natelevincycling@gmail.com>", "Nethanja Focking <nethanja@nethanja.de>", "Daniele Tonon <tonon@vitamino.it>", "jeremyd (@jeremyd)"]
license = "MIT"
repository = "https://github.com/mikedilger/gossip"
homepage = "https://github.com/mikedilger/gossip"
edition = "2021"

[features]
default = ["rustls-tls-native"]

# Include font for Chinese, Japanese and Korean characters
lang-cjk = []

# Use Native TLS code and native root certs
native-tls = [
  "reqwest/native-tls",
  "tungstenite/native-tls",
  "tokio-tungstenite/native-tls"
]

# Use Rust TLS code with WebPKI compiled-in root certs
rustls-tls = [
  "reqwest/rustls-tls-webpki-roots",
  "tungstenite/rustls-tls-webpki-roots",
  "tokio-tungstenite/rustls-tls-webpki-roots"
]

# Use Rust TLS  code with native root certs
rustls-tls-native = [
  "reqwest/rustls-tls-native-roots",
  "tungstenite/rustls-tls-native-roots",
  "tokio-tungstenite/rustls-tls-native-roots"
]

# Make tweaks for AppImage
appimage = []

[dependencies]
base64 = { workspace = true }
bech32 = { workspace = true }
blurhash = { workspace = true, features = ["image"] }
dashmap = { workspace = true }
dirs = { workspace = true }
encoding_rs = { workspace = true }
filetime = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
heed = { workspace = true, features = ["read-txn-no-tls"] }
hex = { workspace = true }
http = { workspace = true }
image = { workspace = true, features = ["png", "jpeg"] }
infer = { workspace = true }
kamadak-exif = { workspace = true }
lazy_static = { workspace = true }
linkify = { workspace = true }
memmap2 = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
nostr-types = { workspace = true, features = [ "speedy" ] }
parking_lot = { workspace = true, features = ["arc_lock", "send_guard"] }
paste = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["brotli", "deflate", "gzip", "json", "stream"] }
resvg = { workspace = true }
rhai = { workspace = true, features = ["std", "sync"] }
sdl2 = { workspace = true, features = ["bundled"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
speedy = { workspace = true }
tempdir = { workspace = true }
textnonce = { workspace = true }
tiny-skia = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["connect", "handshake"] }
tungstenite = { workspace = true }
url = { workspace = true }
usvg = { workspace = true }
watcher = { workspace = true }
zeroize = { workspace = true }

[target.'cfg(windows)'.dependencies]
normpath = { workspace = true }
