[package]
name = "gossip"
version = "0.1.0"
description = "A social media client for nostr"
authors = ["Mike Dilger <mike@mikedilger.com>"]
license = "MIT"
repository = "https://github.com/mikediger/gossip"
homepage = "https://github.com/mikediger/gossip"
default-run = "gossip"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.0", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
