[package]
name = "gossip"
version = "0.1.0"
description = "A social media client for nostr"
authors = ["Mike Dilger <mike@mikedilger.com>"]
license = "MIT"
repository = "https://github.com/mikediger/gossip"
homepage = "https://github.com/mikediger/gossip"
default-run = "gossip"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
dirs = "4.0"
env_logger = "0.9"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
rusqlite = { version = "0.28", features = ["bundled", "chrono", "serde_json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.0", features = [] }
thiserror = "1.0"
tokio = { version = "1", features = [ "full" ] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
