[package]
name = "gossip"
version = "0.1.0"
description = "A social media client for nostr"
authors = ["Mike Dilger <mike@mikedilger.com>"]
license = "MIT"
repository = "https://github.com/mikedilger/gossip"
homepage = "https://github.com/mikedilger/gossip"
default-run = "gossip"
edition = "2021"
rust-version = "1.64"

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
base64 = "0.13"
dirs = "4.0"
env_logger = "0.9"
futures = "0.3"
http = "0.2"
lazy_static = "1.4"
log = "0.4"
nostr-proto = { git = "https://github.com/mikedilger/nostr-proto", branch = "master" }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.28", features = ["bundled", "chrono", "serde_json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.0", features = [] }
textnonce = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = [ "full" ] }
tokio-tungstenite = { version = "0.17", features = [ "rustls-tls-native-roots" ] }
tungstenite = { version = "0.17", features = [ "rustls-tls-native-roots" ] }
zeroize = "1.5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
